[030-(0.2.1)]:: SCROLL EFFECT >> Attempted to use steTimeout() and setInterval, both recursively with an IF 'loop' for a JS-based typing effect per character with charAt(i) += that character. However, setTimeout is ASYNCHRONOUS, meaning timers don't pause loop functions they simply queue as the loop cycle completes. Furthermore, two recursive setTimeout() function calls within the same function would print the first letter of the first area, and the rest of the letters (minus the first letter) of the second area. All-in-all, JS was far too tedious and finicky to use for animating a typewriter effect here. Using animationframe() seemed plausible, but far too much digging for what should be simple styling to prevent the user from simply staring at static text. So, CSS to the rescue! Thanks Geoff Graham at CSS-Tricks.com!!! 2hrs of learning not wasted because of your simple trick!

--- a/consoleStyle.css
+++ b/consoleStyle.css
@@ -1,3 +1,5 @@
+/* Thank You to Geoff Graham of CSS-Tricks.com for the typewriter effect!! */
+
 /* Console CONTENTS styling */
 .console{
   color: rgb(13, 165, 13);
@@ -26,6 +28,11 @@
   padding-left: 3rem;
   text-transform: uppercase;
   font-weight: bold;
+
+  /*Ensures content isn't show until the animation completes*/
+  overflow:hidden;
+  /* to keep all on one line: white-space: nowrap; */
+  animation: typing 2s steps(30, end);
 }
 #ow2{
   font-size: 2rem;
@@ -33,8 +40,13 @@
 
   padding-top: 0rem;
   padding-right: 0rem;
-  padding-bottom: .5rem;
+  padding-bottom: 1rem;
   padding-left: 5rem;
+
+  /*Ensures content isn't show until the animation completes*/
+  overflow:hidden;
+  /* to keep all on one line: white-space: nowrap; */
+  animation: typing 2s steps(30, end);
 }
 
 .expose{
@@ -62,6 +74,12 @@
 
   padding: 0;
   padding-left: 2rem;
+
+  /*Ensures content isn't show until the animation completes:*/
+  overflow:hidden;
+  /*keeps text on its own line as the container grows:*/
+  white-space: nowrap;
+  animation: typing 2s steps(60, end);
 }
 #exp1{
   padding-top: 1rem;
@@ -103,6 +121,15 @@
   padding-left: 2rem;
   padding-top: 1rem;
   display: inline-block;
+
+  width: 0;
+
+  /*Ensures content isn't show until the animation completes:*/
+  overflow:hidden;
+  /*keeps text on its own line as the container grows:*/
+  white-space: nowrap;
+  animation: typing 2s steps(60, end) 3s;
+  animation-fill-mode: forwards;
 }
 .playerComms i{
   padding: .5rem;
@@ -150,4 +177,13 @@
 #com4Div{
   grid-area: com4Div;
   padding-left: 1rem;
+}
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
 }
