--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ h1{
   margin-top: 6vh;
   width: auto;
   justify-content: center;
-  background-color: #074444;
+  background-color: #021313;
   overflow: hidden;
   border-radius: 1.5rem;
 }
